tests/tooling/fixtures/native/execution/positive/assignment_basic_counter.objc3
module AssignmentBasicCounterExec;

fn main() -> i32 {
  let i = 0;
  let sum = 0;
  while (i < 5) {
    i = i + 1;
    sum = sum + i;
  }
  return sum;
}

