tests/tooling/fixtures/native/execution/negative/extern_pure_function_with_body.objc3
module ExternPureFunctionWithBody;

extern pure fn add(lhs: i32, rhs: i32) -> i32 {
  return lhs + rhs;
}

fn main() -> i32 {
  return add(1, 2);
}
